--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,24 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes("Manifest-Version": "1.0", "Main-Class": "Main")
+    }
+}
+
+task buildRunnable(type: Jar) {
+    manifest.from jar.manifest
+    from {
+        configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    with jar
+}
+
 dependencies {
-    compile "org.quteshell:quteshell:1.2.3"
+    compile "org.quteshell:quteshell:1.2.4"
 }
